Final Eng comments

--- a/_include/hu/linux-iscsi-configuration-sles.adoc
+++ b/_include/hu/linux-iscsi-configuration-sles.adoc
@@ -1,4 +1,7 @@
-To ensure that multipathing is configured correctly for your host, set the `timeout` parameter on your host and confirm that the iSCSI service is running and connecting to the iSCSI targets.
+Ensure that iSCSI is configured correctly for your host.
+ 
+.About this task
+You perform the following steps on the iSCSI host.
 
 .Steps
 
