Add iscsi configuration steps to proxmox

--- a/_include/hu/linux-iscsi-configuration-ubuntu.adoc
+++ b/_include/hu/linux-iscsi-configuration-ubuntu.adoc
@@ -5,7 +5,7 @@ You perform the following steps on the iSCSI host.
 
 .Steps
 
-. Verify that the iSCSI initiator package (iscsi-initiator-utils) is installed: 
+. Verify that the iSCSI initiator package (open-iscsi) is installed: 
 +
 [source,cli]
 ----
