--- a/hu-proxmox-ve-8x.adoc
+++ b/hu-proxmox-ve-8x.adoc
@@ -26,14 +26,17 @@ You can use multipathing with Proxmox VE 8.x to manage ONTAP LUNs.
 
 include::_include/hu/proxmox-multipathing.adoc[]
 
-== Step 2: Optionally, exclude a device from multipathing
+== Step 2: Confirm the iSCSI configuration for your host
+
+include::_include/hu/linux-iscsi-configuration-ubuntu.adoc[]
+
+== Step 3: Optionally, exclude a device from multipathing
 
 include::_include/hu/exclude-device.adoc[]
 
-== Step 3: Customize multipath parameters for ONTAP LUNs
-
+== Step 4: Customize multipath parameters for ONTAP LUNs
 include::_include/hu/linux-customize-parameters.adoc[]
 
-== Step 4: Review the known issues
+== Step 5: Review the known issues
 
 There are no known issues.
